# falcon9-gfold-landing

./: .gitignore  LICENSE  README.md  requirements.txt
cpp_sim/: CMakeLists.txt  main.cpp
cpp_sim/gfold_solver/: scvx_solver.hpp
cpp_sim/gnc/: control.hpp  ekf.hpp  guidance.hpp  octaweb.hpp  safety.hpp  sensor_guard.hpp
cpp_sim/tests/: benchmark.cpp  golden_align.cpp  scvx_benchmark.cpp  test_golden_data.cpp
docs/: 开发日志.txt  论文.md
src/: actuators.py  aero.py  attitude_control.py  delay_comp.py  dynamics.py  ekf.py  flight_controller.py  guidance.py  octaweb.py  rocket_params.py  safety_monitor.py  sensors.py  wind.py
tests/: e1e3_nominal.py  e4_delay_comp.py  e5_octaweb.py  e6_hardening.py  mc100_batch.py  step_d_verify.py
